# DearChat

./: .gitignore  CMakeLists.txt  readme.md
src/client/: client.cpp  client.h  client.m.cpp  clientgui.m.cpp  console.h  gui_utils.h
src/lib/: messaging.h
src/server/: server.cpp  server.h  server.m.cpp
